# chatbot

./: Enviar WhatsApp Python.2.py  Enviar_WhatsApp_Python.py  README.md  mensageria.py  mensageria2.py  pyproject.toml
Perfil/: DevToolsActivePort  Local State
Perfil/Default/: Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Visited Links  Web Data
Perfil/Default/DawnCache/: data_1  index
Perfil/Default/Extension Rules/: LOG
Perfil/Default/Extension Scripts/: LOG
Perfil/Default/Extension State/: LOG  LOG.old
Perfil/Default/GPUCache/: data_0  data_1  data_2  index
Perfil/Default/Session Storage/: LOG  LOG.old
Perfil/Default/Sessions/: Session_13328389191177948  Session_13328389821163519
Perfil/Default/Site Characteristics Database/: LOG  LOG.old
Perfil/Default/WebStorage/: QuotaManager
Perfil/Default/shared_proto_db/: LOG  LOG.old
Perfil/GrShaderCache/: data_0  data_1  index
Perfil/ShaderCache/: data_1  index
User_Data/: DevToolsActivePort  Local State
User_Data/CertificateRevocation/7987/: crl-set  manifest.fingerprint  manifest.json
User_Data/Default/: Cookies  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Visited Links  Web Data
User_Data/Default/DawnCache/: data_1  index
User_Data/Default/Extension Rules/: LOG
User_Data/GrShaderCache/: data_0  data_1  index
User_Data/ShaderCache/: data_1  index
User_Data/WidevineCdm/: latest-component-updated-widevine-cdm
lpiseguros/: pyproject.toml
(+1057 files in other folders)
